trying to improve the look of my site by adding a background color and fixing the layout for the landscape view on tablet in my recipes_name.html

--- a/static/scss/components/general/general.scss
+++ b/static/scss/components/general/general.scss
@@ -1,5 +1,6 @@
 html, body {
     max-width: 100%;
+    background-color: #fffdd0 !important;
     overflow-x: hidden;
 }
 .jumbotron{
@@ -15,6 +16,13 @@ html, body {
         width: 65%;
         margin-left: 15%;
         padding: 7rem 2rem !important;
+    }
+}
+
+.margin{
+    @include computer{
+        margin-top: 1%;
+        margin-bottom: 1%;
     }
 }
 
@@ -145,6 +153,10 @@ html, body {
         padding-left: 0%;
     }
     
+    @include computer{
+        padding-left: 27%;
+    }
+    
 }
 
 .button1{
@@ -153,6 +165,11 @@ html, body {
     @include mobile{
         margin-left: 20%;
     }
+}
+
+.btn{
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 .pagination {
@@ -178,6 +195,10 @@ html, body {
 
 .margin1{
     padding-left: 20%;
+    
+    @include computer{
+        padding-left: 10%;
+    }
 }
 
 form{
@@ -310,6 +331,10 @@ p{
     @include tab{
         font-size: 20px;
     }
+    
+    @include computer{
+        font-size: 15px;
+    }
 }
 
 .p1{
@@ -323,6 +348,11 @@ p{
         width: 90%;
         padding-left: 10%;
         font-size: 20px;
+    }
+    
+    @include computer{
+        width: 75%;
+        padding-left: 25%;
     }
     @include desktop {
         padding-top: 10%;
@@ -339,6 +369,7 @@ p{
 }
 
 .p2{
+    padding-top: 5%;
     @include mobile{
         padding-top: 5%;
     }
@@ -361,6 +392,41 @@ p{
     
 }
 
+.p3{
+    
+    @include mobile{
+        width: 90%;
+        padding-left: 10%;
+    }
+    @include tab{
+        width: 90%;
+        padding-left: 10%;
+        font-size: 20px;
+    }
+    @include desktop {
+        padding-top: 10%;
+        font-weight: bold;
+        width: 75%;
+        font-size: 16px;
+        word-wrap: break-word;
+        padding-left: 20%;
+        margin-left: 3%;
+        
+    }
+    
+    
+}
+
+.p4{
+    padding-top: 5%;
+    @include mobile{
+        padding-top: 5%;
+    }
+    @include tab{
+        padding-top: 5%;
+    }
+}
+
 img{
     
     @include mobile{
@@ -370,6 +436,11 @@ img{
     
     @include tab{
         width: 300px;
+        height: 200px;
+    }
+    
+    @include computer{
+        width: 400px;
         height: 200px;
     }
 }
